--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "directories": {
     "lib": "lib"
   },
-  
   "scripts": {
     "test": "jest --coverage",
     "eslint": "eslint --ext .js lib/ test/ --fix"
@@ -28,5 +27,8 @@
     "eslint": "^6.7.1",
     "eslint-plugin-react": "^7.16.0",
     "jest": "^24.9.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.0"
   }
 }
